align error response in JwtAuthFilter with GlobalExceptionHandler